sec10-ingress/02-simple-ingress/02-simple-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - http:
        paths: # <--- Indented by 2 spaces relative to "http"
          - path: /
            pathType: Prefix
            backend: 
              service:
                name: my-app
                port:
                  number: 80
